# mDNSTest

./: .gitmodules  CMakeLists.txt  build.sh  cleanup.sh  client.cpp  testservice.cpp
cmake/modules/: FindAvahi.cmake  FindBonjour.cmake
src/: AvahiMDNSManager.cpp  BonjourMDNSManager.cpp  DummyMDNSManager.cpp  MDNSManager.hpp  client-browse-services.c  client-publish-service.c  client2.c  client_original.cpp  testclient.cpp
